<resources>
    <string name="app_name">ServiceAlarm</string>
    <string name="btn_siguiente">SIGUIENTE</string>
    <string name="btn_agregar">AGREGAR OTRA ALARMA</string>
    <string name="btn_buscar">BUSCAR</string>
    <string name="title_configurar">CONFIGURAR ALARMA</string>
    <string name="fecha_recep">Fecha Recepción:</string>
    <string name="fecha_pago">Fecha Pago:</string>
    <string name="fecha_corte">Fecha Corte:</string>
    <string name="label_alarma">Alarma a las</string>
    <string name="label_dias_antes">Días antes</string>
    <string name="hora">HH:MM</string>
    <string name="día">D</string>
    <string name="Logo">Logo</string>
    <string name="title_notificaciones">NOTIFICACIONES</string>
    <string name="enviar_correo">Enviar al correo</string>
    <string name="enviar_sms">Enviar mensaje de texto</string>
    <string name="ninguna">Ninguna</string>
    <string name="title_sonido">SONIDO DE LA ALARMA</string>
    <string name="cancion">¡Aquí va tu canción!</string>
    <string name="escribe">Escribe aquí</string>
    <string name="tip">Tip sonido alarma</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string-array name="sonido_opciones">
        <item>Selecciona un sonido</item>
        <item>Ring</item>
        <item>Bell</item>
        <item>Personalizado</item>
    </string-array>
</resources>