<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurarAlarmaRecepcion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Superior"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgrounda_app"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="73dp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/Logo"
                app:srcCompat="@drawable/alarm_clock_12179137" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/title_configurar"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/title_configurar"
                android:textAlignment="center"
                android:textColor="@color/rosa"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="@string/title_configurar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/fecha_recep"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/fecha_recep"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="@string/fecha_recep" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="01 Ago"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="420dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_agregar"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/btn_agregar"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/btn_agregar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="350dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:contentDescription="@string/fecha_pago"
                android:fontFamily="@font/roboto_light"
                android:text="@string/label_alarma"
                android:textSize="20sp"
                tools:text="@string/label_alarma" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:autofillHints="@string/hora"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/hora"
                android:inputType="time"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:autofillHints="@string/día"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/día"
                android:inputType="number"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="27dp"
                android:contentDescription="@string/label_alarma"
                android:fontFamily="@font/roboto_light"
                android:text="@string/label_dias_antes"
                android:textSize="20sp"
                tools:text="@string/label_dias_antes" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Middle"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@+id/Superior"
        app:layout_constraintBottom_toTopOf="@+id/Inferior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/separator"
            android:orientation="horizontal"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Inferior"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:background="@color/design_default_color_primary"
                android:fontFamily="@font/roboto_medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="30dp"
                android:paddingTop="0dp"
                android:paddingRight="30dp"
                android:paddingBottom="0dp"
                android:text="@string/btn_siguiente"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>